src/app/globals.css
@import 'tailwindcss';

@theme {
  --font-product-sans: var(--font-product-sans-variable);

  --animate-pulsate: pulsate 2s ease-in-out infinite;
  --animate-fade-in: fade-in 0.5s ease-in-out;

  --color-solid-matte-gray: #757575;
  --color-tech-white: #F5F5F5;
  --color-alexandra: #4285F4;
  --color-blackout: #1E1E1E;

  --breakpoint-2xl: 1920px;
  --breakpoint-xl: 1440px;
  --breakpoint-lg: 1024px;
  --breakpoint-md: 768px;
  --breakpoint-sm: 640px;
  --breakpoint-xs: 375px;

  @keyframes pulsate {
    0%,
    100% {
      transform: scale(1);
    }
    50% {
      transform: scale(1.04);
    }
  }

  @keyframes fade-in {
    from {
      opacity: 0;
    }
    to {
      opacity: 1;
    }
  }
}

html {
  scroll-behavior: smooth !important;
}

button,
[role='button'] {
  cursor: pointer !important;
}

input:-webkit-autofill,
input:-webkit-autofill:focus {
  -webkit-box-shadow: 0 0 0 1000px white inset;
  transition:
    background-color 32768s 0s,
    color 32768s 0s;
}

input[data-autocompleted] {
  background-color: transparent !important;
}

::-webkit-scrollbar-thumb {
  background-color: #4285F4;
  border-radius: 9999px;
}

::-webkit-scrollbar-track {
  background-color: #FFFFFF;
}

::-webkit-scrollbar {
  width: 4px;
}

